--- a/HBRPractNet5/ProyectoPropietaria.csproj
+++ b/HBRPractNet5/ProyectoPropietaria.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
-    <AssemblyName>HBRPractNet</AssemblyName>
-    <RootNamespace>HBRPractNet</RootNamespace>
+    <AssemblyName>ProyectoPropietaria</AssemblyName>
+    <RootNamespace>ProyectoPropietaria</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
